[package]
name = "s25-core"
version = "0.2.2"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = { version = "1.3.4", default_features = false }

[features]
default = ["std"]
std = []
