[package]
name = "s25-wasm"
version = "0.2.2"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"
description = "Decoder and encoder for ShiinaRio .S25 format for WebAssembly. "
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/s25"
repository = "https://github.com/3c1u/s25"
keywords = ["s25", "image", "decoder", "vn", "shiina-rio", "wasm"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.45"
wasm-bindgen = "0.2.68"
wee_alloc = "0.4.5"
byteorder = { version = "1.3.4", default_features = false }
s25-core = { path = "../s25-core", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["cdylib"]
