[package]
name = "s25"
version = "0.2.0"
authors = ["Hikaru Terazono (3c1u) <3c1u@vulpesgames.tokyo>"]
edition = "2018"
description = "Decoder and encoder for ShiinaRio .S25 format. "
license = "MIT OR Apache-2.0"
readme = "../README.md"
documentation = "https://docs.rs/s25"
repository = "https://github.com/3c1u/s25"
keywords = ["s25", "image", "decoder", "vn", "shiina-rio"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = { version = "0.1.8", optional = true }

[features]
default = []
fail = ["failure"]
